spelling and format

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -249,7 +249,7 @@
             <div class="col-12">
                 <h1 class="display-4 title1">LET LEARNING BE SIMPLE</h1>
                 <h1 class="espresso-1">Wait wait...</h1>
-                <h1 class="espresso-2">Quick expreso break</h1>
+                <h1 class="espresso-2">Quick espresso break</h1>
                 <p class="bulletPoints">We believe that there is something to learn from anyone.</p>
                 <p class="bulletPoints"> Organize tutoring environments to fit your schedule</p>
                 <p class="bulletPoints">Learning should be fast, simple and easy.</p>
