--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -127,11 +127,11 @@
                         <form style="float: left;" action="/api/students/search" class="search-form">
                             <i class="fas fa-search"></i>
                             <input type="search" name="term">
-                            <input type="submit" value="Search">
+                            <input type="submit" value="Search" class="btn btn-info">
                         </form>
-
                         <nav>
-                            <button style="float: right;" type="button" id="sidebarCollapse" class="btn btn-info m-1">
+
+                            <button style="float: right;" type="button" id="sidebarCollapse" class="btn btn-info">
                                 <i class="fas fa-align-left"></i>
                                 <span>Filter Clases</span>
                             </button>
