--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,8 @@
     <div class="container-fluid">
 
         <a class="navbar-brand" href="#"><img src="">
-            <h2 class="ml-4">tutorMe!</h2>
+            <h2 class="ml-4">tutorMe</h2>
+            
         </a>
         <h1 class="ml4 text-center d-none d-md-flex justify-content-center pl-4">
             <div><span class="letters letters-1">What in the world...</span></div>
@@ -48,7 +49,7 @@
             <h5 class="background m-4">Learn at your own comfort</h5>
         </div>
         <div class="col-2 text-center">
-            <h5 class="background m-1">learn from anyone</h5>
+            <h5 class="background m-1">Learn from anyone</h5>
         </div>
         <div class="col-3 text-center">
             <h5 class="background m-4">Learn Anywhere with Zoom</h5>
@@ -73,13 +74,13 @@
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2 text-center">
 
             <p class="lead">
-                An online tutoring service that is available to you from anywhere. 
+                An online tutoring platform that is available to you from anywhere. 
                 </p>
                 <p>
                 link with others who have already mastered what you are learning.
                 Tutor others If you have a good grasp on coding, why not make your foundation and pocket stronger.
                 </p>
-                <p>Students can fit their existing responsibilities and commitments, and can engage with multimedia content and learning materials at whatever time is most convenient to them. Even better: they don’t have to travel anywhere to study, they can simply log in to the app from the comfort of their own home, office or anywhere they with an internet connection.</p>
+                <p>Students can fit their existing responsibilities and commitments, and can engage with multimedia content and learning materials at whatever time is most convenient to them. Even better: they don’t have to travel anywhere to study, they can simply log in to the app from the comfort of their own home, office or anywhere with an internet connection.</p>
                 <p></p>
                 <p>Learning should be fast, simple and easy.</p>
 
@@ -264,10 +265,10 @@
             <div class="col-12">
                 <h1 class="display-4 title1">Bottom line...</h1>
                 <h1 class="espresso-1">Wait wait...</h1>
-                <h1 class="espresso-2">Quick expreso break</h1>
+                <h1 class="espresso-2">Quick espresso break</h1>
 
                  <h3 class="bulletPoints"></h3>
-               <h3 class="bulletPoints">Make your own positive work space </h3>  <h3 class="bulletPoints"> Set or pick your own hours </h3>  <h3 class="bulletPoints"> Learn at your convinence </h3>
+               <h3 class="bulletPoints">Make your own positive work space </h3>  <h3 class="bulletPoints"> Set or pick your own hours </h3>  <h3 class="bulletPoints"> Learn at your convenience </h3>
 
                 
                 <div class="col-12 espresso">
@@ -394,6 +395,7 @@
                 <a href="https://stackoverflow.com" target="_blank"><i class="fab fa-stack-overflow fa-3x"></i></a>
                 <a href="https://getbootstrap.com" target="_blank"><i class="fab fa-bootstrap fa-3x"></i></a>
                 <a href="https://www.google.com/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
+               <br> <a href="https://www.w3schools.com" target="_blank">w3Schools</a>
                 <!-- neet to rplace with w3schools or delete 
                             <i class="fab fa-github fa-3x"></i> -->
 
@@ -401,7 +403,7 @@
             <div class="col-md-4">
                 <h4>Location</h4>
                 <hr class="light">
-                <p>Full-stack Flex Bootcamp</p>
+                <p>Full-Stack Flex Bootcamp</p>
                 <p>Georgia, Tech</p>
                 <p>Atlanta, GA</p>
                 <p>30308</p>
@@ -409,11 +411,11 @@
             <div class="col-md-4">
                 <h4>Support</h4>
                 <hr class="light">
-                <p>tutorme.supoort@goodquestion.org</p>
+                <p>tutorMe.supoort@goodquestion.com</p>
             </div>
             <div class="col-12">
                 <hr class="light">
-                <h4>&copy; tutorme.com</h4>
+                <h4>&copy; tutorMe</h4>
             </div>
         </div>
 
