fixed double text

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,29 +86,7 @@
 
    
         </div>
-        {{!-- <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-
-</div>
-<div class="row jumbtron mt-3 d-flex justify-content-center" id="about">
-
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2 text-center">
-
-        <p class="lead">
-            An online tutoring service that is available to you from anywhere.
-        </p>
-        <p>
-            Link with others who have already mastered what you are learning.
-            Tutor others! If you have a good grasp on coding, why not make your foundation and pocket stronger.
-        </p>
-        <p>Students can fit their existing responsibilities and commitments, and can engage with multimedia content and
-            learning materials at whatever time is most convenient to them. Even better: they don’t have to travel
-            anywhere to study, they can simply log in to the app from the comfort of their own home, office or anywhere
-            they with an internet connection.</p>
-        <p></p>
-        <p>Learning should be fast, simple and easy.</p>
-
-
-    </div>
+       
     {{!-- <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 
             <button type="button" class="btn btn-primary login-modal-btn mt-4" data-toggle="modal"
@@ -293,9 +271,7 @@
                 <h1 class="espresso-2">Quick espresso break</h1>
 
 
-                 <h3 class="bulletPoints"></h3>
-               <h3 class="bulletPoints">Make your own positive work space </h3>  <h3 class="bulletPoints"> Set or pick your own hours </h3>  <h3 class="bulletPoints"> Learn at your convenience </h3>
-
+                 
             <h3 class="bulletPoints"></h3>
             <h3 class="bulletPoints">Make your own positive work space </h3>
             <h3 class="bulletPoints"> Set or pick your own hours </h3>
@@ -363,7 +339,7 @@
                 <img class="card-imd-top profile2" src="">
                 <div class="card-body text-center">
                     <h4 class="card-title">Gus</h4>
-                    <p class="card-text">Future Software Engineer. Always a student.<br> <br></p>
+                    <p class="card-text">Future Software Engineer. Always a student.<br> <br> <br></p>
                     <a href="#" class="btn btn-outline-secondary url2">View Github Profile<br><i
                             class="fab fa-github fa-1x"></i></a>
                 </div>
@@ -452,7 +428,7 @@
 
                 <p>tutorMe.supoort@goodquestion.com</p>
 
-                <p>tutorme.support@goodquestion.org</p>
+                
 
             </div>
             <div class="col-12">
