--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,12 +10,12 @@
             <div><span class="letters letters-2">is tutorMe?</span></div>
             <div><span class="letters letters-3">Great question!</span></div>
         </h1>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <button class="navbar-toggler mr-4" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto text-center">
                 <li class="nav-item active">
                     <a class="nav-link" href="#navTop">Home</a>
                 </li>
@@ -42,23 +42,25 @@
 </nav>
 <div class="container-fluid">
 
-    <div class="parallax2  row">
+    <div class="parallax2 row d-flex justify-content-center">
 
-        <div class="col-2"></div>
-        <div class="col-3 text-center">
-            <h5 class="background m-4">Learn at your own comfort</h5>
+        
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+            <h5 class="background text-center">Learn at your own comfort</h5>
         </div>
-        <div class="col-2 text-center">
-            <h5 class="background m-1">Learn from anyone</h5>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+            <h5 class="background  text-center">Learn from anyone</h5>
         </div>
-        <div class="col-3 text-center">
-            <h5 class="background m-4">Learn Anywhere with Zoom</h5>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+            <h5 class="background text-center">Learn anywhere with Zoom</h5>
         </div>
-        <div class="col-2"></div>
     </div>
 </div>
 <div class="container-fluid">
+    
     <div class="d-flex justify-content-center" id="buttonBox">
+       
+        <div class="buttonBox">
         <button type="button" class="btn btn-primary login-modal-btn mt-4" data-toggle="modal"
             data-target=".bd-example-modal-lg-1">Log
             in</button>
@@ -68,10 +70,13 @@
             up</button>
 
     </div>
+    
+
+    </div>
 
     <div class="row jumbtron mt-3 d-flex justify-content-center" id="about">
 
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2 text-center">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2 text-center boxText">
 
             <p class="lead">
                 An online tutoring platform that is available to you from anywhere. 
@@ -81,73 +86,30 @@
                 Tutor others If you have a good grasp on coding, why not make your foundation and pocket stronger.
                 </p>
                 <p>Students can fit their existing responsibilities and commitments, and can engage with multimedia content and learning materials at whatever time is most convenient to them. Even better: they don’t have to travel anywhere to study, they can simply log in to the app from the comfort of their own home, office or anywhere with an internet connection.</p>
-                <p></p>
                 <p>Learning should be fast, simple and easy.</p>
 
-   
         </div>
-       
-    {{!-- <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-
-            <button type="button" class="btn btn-primary login-modal-btn mt-4" data-toggle="modal"
-                data-target=".bd-example-modal-lg-1">Log
-                in</button>
-
-            <button type="button" class="btn btn-primary signup-modal-btn mt-4" data-toggle="modal"
-                data-target=".bd-example-modal-lg-1">Sign
-                up</button>
-
-        </div> --}}
 
 </div>
 </div>
-
-
-
-
-{{!-- coffee break --}}
-
-{{!-- <div class="container-fluid espresso">
-
-    <div class="coffee-header">
-      <div class="coffee-header__buttons coffee-header__button-one"></div>
-      <div class="coffee-header__buttons coffee-header__button-two"></div>
-      <div class="coffee-header__display"></div>
-      <div class="coffee-header__details"></div>
-    </div>
-    <div class="coffee-medium">
-      <div class="coffe-medium__exit"></div>
-      <div class="coffee-medium__arm"></div>
-      <div class="coffee-medium__liquid"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-one"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-two"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-three"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-for"></div>
-      <div class="coffee-medium__cup"></div>
-    </div>
-    <div class="coffee-footer"></div>
-  </div> --}}
-
-
-
 
 <div class="container-fluid">
-    <h1 class="display-4 text-center">Zoom in or out <i class="fas fa-plane-departure fa-f2"></i></h1>
+    <h1 class="display-4 text-center mb-4">Zoom in or out<i class="fas fa-plane-departure fa-f2"></i></h1>
     <div class="row">
-        <div class="col-md-3 col-sm-12">
-            <h5 id="picText1">tutorMe from bed</h5>
+        <div class="col-xs-12 col-md-3 col-sm-12  d-flex justify-content-sm-center">
+            <h5  id="picText1">tutorMe from bed... </h5>
             <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
         </div>
-        <div class="col-md-3 col-sm-12">
-            <h5 id="picText2">tutorMe stress free</h5>
+        <div class="col-xs-12 col-md-3 col-sm-12  d-flex justify-content-sm-center">
+            <h5 id="picText2">tutorMe stress free...</h5>
             <img class="worldPics" src="/images/turned-on-macbook-pro-on-brown-table-1580329.jpg">
         </div>
-        <div class="col-md-3 col-sm-12">
-            <h5 id="picText3">tutorMe right now...</h5>
+        <div class="col-xs-12 col-md-3 col-sm-12  d-flex justify-content-sm-center">
+            <h5 id="picText3">tutorMe right now...  </h5>
             <img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg">
         </div>
-        <div class="col-md-3 col-sm-12">
-            <h5 id="picText4">tutorMe from anywhere</h5>
+        <div class="col-xs-12 col-md-3 col-sm-12  d-flex justify-content-sm-center">
+            <h5 id="picText4">tutorMe anywhere... </h5>
             <img class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
         </div>
     </div>
@@ -266,7 +228,7 @@
     <div class="container-fluid padding">
         <div class="row welcome text-center">
             <div class="col-12">
-                <h1 class="display-4 title1">Bottom line...</h1>
+               <div class="col-12"><h1 class="display-5 title1">Bottom line...</h1></div>
                 <h1 class="espresso-1">Wait wait...</h1>
                 <h1 class="espresso-2">Quick espresso break</h1>
 
@@ -321,7 +283,7 @@
     </h1>
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-12 col-md-4 col-lg-4">
             <div class="card">
                 <img class="card-imd-top profile1" src="">
                 <div class="card-body text-center">
@@ -334,7 +296,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12 col-md-4 col-lg-4">
             <div class="card">
                 <img class="card-imd-top profile2" src="">
                 <div class="card-body text-center">
@@ -345,7 +307,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-12 col-md-4 col-lg-4">
             <div class="card">
                 <img class="card-imd-top profile3" src="">
                 <div class="card-body text-center">
@@ -360,14 +322,14 @@
         </div>
 
     </div>
-    <div class="container-fluid padding">
+    <div class="container-fluid padding mt-4">
         <div class="col-12">
             <h1 class="display-4 text-center" id="stuff">Take notes for success</h1>
             <hr class="light">
 
         </div>
         <div class="row text-center">
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <h5 class="background">#cleanIsIn</h5>
 
                 <iframe src="https://giphy.com/embed/SAITQHfB6SLQc3fuf3" width="480" height="480" frameBorder="0"
@@ -375,7 +337,7 @@
                 <p><a href="https://giphy.com/gifs/safefood-hand-handwashing-washing-SAITQHfB6SLQc3fuf3"></a></p>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <h5 class="background">#vote don't be that guy... or girl</h5>
 
                 <iframe src="https://giphy.com/embed/8lTcWsBdlhXXodYP0u" width="480" height="480" frameBorder="0"
@@ -383,7 +345,7 @@
                 <p><a href="https://giphy.com/gifs/GoVote-vote-election-govote-8lTcWsBdlhXXodYP0u"></a></p>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
                 <h5 class="background">#liveYoLife</h5>
                 <iframe src="https://giphy.com/embed/WQaHrd6Z3038DofLRl" width="480" height="480" frameBorder="0"
                     class="giphy-embed" allowFullScreen></iframe>
@@ -409,10 +371,8 @@
                 <a href="https://stackoverflow.com" target="_blank"><i class="fab fa-stack-overflow fa-3x"></i></a>
                 <a href="https://getbootstrap.com" target="_blank"><i class="fab fa-bootstrap fa-3x"></i></a>
                 <a href="https://www.google.com/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
-               <br> <a href="https://www.w3schools.com" target="_blank">w3Schools</a>
-                <!-- neet to rplace with w3schools or delete 
-                            <i class="fab fa-github fa-3x"></i> -->
-
+               <br> 
+               <a href="https://www.w3schools.com" target="_blank">w3Schools</a>
             </div>
             <div class="col-md-4">
                 <h4>Location</h4>
